# ElfRender

./: .gitignore  Dwarfer.spec  README.md  cli.py  main.py  pyproject.toml  requirements.txt
elfrender/: __init__.py  controller.py  model.py
elfrender/view/: app.css  app.js  index.html
web/: symbols.css  symbols.html  symbols.js
